# diacare1

./: .flake8  .pre-commit-config.yaml  README.md  go.mod  mypy.ini  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  go-ci.yml
cmd/diacare/: main.go
pkg/diacare/: diacare.go  diacare_test.go
src/diacare/: __init__.py
tests/: test_diacare.py
