[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diacare1"
version = "0.1.0"
description = "Minimal scaffold for diacare1"
authors = [{name = "", email = ""}]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
